--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+heading{
+	Font size: 20 pixels
+Text color: white
+Text decoration: underline
+	
+	
+} 
+div{
+	background color :purple;
+}
