--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,10 @@ Left side border color: green
 Left side border thickness: 5 pixels
 Padding on all sides: 10px
 }
+*{
+Width: 200px
+Background color: purple
+Left side border color: green
+Left side border thickness: 5 pixels
+Padding on all sides: 10px
+}
