--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,14 @@
 
-/* Your CSS Code here. */
-.heading{
-Font size: 20 pixels
-Text color: white
-Text decoration: underline
-Width: 200px
-Background color: purple
-Left side border color: green
-Left side border thickness: 5 pixels
-Padding on all sides: 10px
+/* Your CSS Code her*/
+
+.main {
+    width: 200px;
+    background-color: purple;
+    border-left: 5px solid green;
+    padding: 10px;
 }
-*{
-Width: 200px
-Background color: purple
-Left side border color: green
-Left side border thickness: 5 pixels
-Padding on all sides: 10px
+.heading {
+    font-size: 20px;
+    color: white;
+    text-decoration: underline;
 }
